--- a/index.html
+++ b/index.html
@@ -207,15 +207,15 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active ">
                             <a href="" class="carousel-abs"></a>
-                            <img src="/src/img/news1.png" class="d-block w-100" alt="carousel-img">
+                            <img src="./src/img/news1.png" class="d-block w-100" alt="carousel-img">
                         </div>
                         <div class="carousel-item">
                             <a href="" class="carousel-abs"></a>
-                            <img src="/src/img/news2.png" class="d-block w-100" alt="carousel-img">
+                            <img src="./src/img/news2.png" class="d-block w-100" alt="carousel-img">
                         </div>
                         <div class="carousel-item">
                             <a href="" class="carousel-abs"></a>
-                            <img src="/src/img/news.jpeg" class="d-block w-100" alt="carousel-img">
+                            <img src="./src/img/news.jpeg" class="d-block w-100" alt="carousel-img">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
@@ -238,7 +238,7 @@
                             <div class="muraciet">
                                 <a href="dinamic.html" class="muraciet-link-div"></a>
                                 <a href="dinamic.html" class="white-circle">
-                                    <img src="/src/img/telephone.png" alt="" class="online-img">
+                                    <img src="./src/img/telephone.png" alt="" class="online-img">
                                     <p class="online_muraciet_title">
                                         Qaynar xətt
                                     </p>
@@ -256,7 +256,7 @@
                                 <a href="https://hesab.az/unregistered/#/direct-pay/nakhchivan/naxcivanqaz/parameters"
                                     target="_blank" class="white-circle">
                                     <div class="online-icon">
-                                        <img src="/src/img/online.png" alt="" class="online-img">
+                                        <img src="./src/img/online.png" alt="" class="online-img">
                                     </div>
                                     <p class="online_muraciet_title">
                                         Onlayn ödəniş
@@ -275,7 +275,7 @@
                                 <a href="faq.html" class="muraciet-link-div"></a>
                                 <a href="faq.html" class="white-circle">
                                     <div class="online-icon">
-                                        <img src="/src/img/question.png" alt="" class="online-img">
+                                        <img src="./src/img/question.png" alt="" class="online-img">
                                     </div>
                                     <p class="online_muraciet_title">
                                         Tez-tez verilən suallar
@@ -293,7 +293,7 @@
                                 <a href="dinamic.html" class="muraciet-link-div"></a>
                                 <a href="dinamic.html" class="white-circle">
                                     <div class="online-icon">
-                                        <img src="/src/img/info.png" alt="" class="online-img">
+                                        <img src="./src/img/info.png" alt="" class="online-img">
                                     </div>
                                     <p class="online_muraciet_title">
                                         Qaz İstismar Xidməti Xəbərdarlıq edir!
