--- a/faq.html
+++ b/faq.html
@@ -24,6 +24,9 @@
 </head>
 
 <body>
+    <div class="loader">
+        <img src="./src/img/gerb.png" alt="">
+    </div>
   <!-- back to top -->
   <a href="javascript:void(0)" id="backToTop" class="back-to-top" style="display:none;">
     <svg width="40px" height="40px" viewBox="0 0 1024 1024" xmlns="http://www.w3.org/2000/svg"
